# Chameleon

subarchitectures/chameleon/: CMakeLists.txt
subarchitectures/chameleon/config/: chameleon.cast
subarchitectures/chameleon/src/c++/: BasicAlgorithm.cpp  BasicAlgorithm.hpp  CMakeLists.txt  Chameleon.cpp  Chameleon.hpp  ChameleonComponent.cpp  ChameleonComponent.hpp  ChameleonSpecific.cpp  ChameleonSpecific.hpp  DummyComponent.cpp  DummyComponent.hpp  KNearestNeighbour.cpp  KNearestNeighbour.hpp  LearnCommands.cpp  LearnCommands.hpp  RandomAlgorithm.cpp  RandomAlgorithm.hpp  UNI.s
subarchitectures/chameleon/src/slice/: LearnCommands.ice
